# alsaAudio

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/verveba/tapasaudiorec/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: alsarecord.cpp  pcm.h
app/src/main/java/com/verveba/alsaAudio/: MainActivity.java
app/src/main/java/com/verveba/tapasaudiorec/: MainActivity.java
app/src/main/res/layout/: activity_main.xml  content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/verveba/tapasaudiorec/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
